Add CQRS Class (07.02.26)

--- a/Core/MovieApi.Application/MovieApi.Application.csproj
+++ b/Core/MovieApi.Application/MovieApi.Application.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Features\CQRSDesignPattern\Handlers\" />
-    <Folder Include="Features\CQRSDesignPattern\Queries\" />
+    <Folder Include="Features\CQRSDesignPattern\Handlers\CategoryHandlers\" />
+    <Folder Include="Features\CQRSDesignPattern\Handlers\MovieHandlers\" />
   </ItemGroup>
 
 </Project>
